# trilogy-studio-core

./: .env.development  .gitignore  .npmrc  .prettierignore  .prettierrc.toml  .ts-node-options  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  PLAN_LLM_CHAT.md  README.md  index.html  llm-results.md  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  results.json  test_request.json  tsconfig-build.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite-plugin-node-polyfills.d.ts  vite.config.ts  vitest.config.ts
docker/: index.html  nginx.conf  supervisord.conf  vite.config.ts
docs/: remote-store-contract.md
e2e/: basic-dashboard.spec.ts  community-model.spec.js  core.spec.js  custom-store.spec.ts  dashboard-import-flow.spec.ts  mock-openai.ts  remote-store-import.spec.ts  test-env.js  test-helpers.js  test-helpers.spec.js  test-llm-and-cred.spec.ts  test-llm-chat.spec.ts  test-sql-editor.spec.ts  test-trilogy-editor.spec.ts  test-upload.spec.ts  tutorial-scroll.spec.ts  tutorial.spec.ts
explorer/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
explorer/src-tauri/: Cargo.toml  tauri.conf.json
explorer/src-tauri/capabilities/: default.json
explorer/src-tauri/crates/query-bridge/: Cargo.toml  build.rs
explorer/src-tauri/crates/query-bridge/src/: lib.rs  manager.rs  protocol.rs
explorer/src-tauri/crates/query-bridge/src/workers/: duckdb.rs  mod.rs
explorer/src-tauri/crates/query-bridge/tests/fixtures/ml-latest-small/: README.md
explorer/src-tauri/icons/: icon.icns
explorer/src-tauri/src/: lib.rs  main.rs
lib/: .npmrc  README.md  main.ts  (+16 more)
pyserver/: .dockerignore  Dockerfile  README.md  STDLIB_NESTED_IMPORT_BUG.md  UPSTREAM_FILE_RESOLUTION.md  benchmark_baseline.md  common.py  diagnostics.py  env_helpers.py  fly.toml  io_models.py  main.py  mcp_server.py  mock_model_server.py  mock_remote_store_server.py  process_pool.py  pyproject.toml  query_helpers.py  requirements-test.txt  requirements.txt  studio_endpoints.py  utility.py
pyserver/scripts/: adhoc_snowflake.py  benchmark_concurrency.py  generate_ai_guidance.py  hit_local.ipynb  load_test.py  load_test_baseline_20260403_094409.json  load_test_baseline_20260403_100403.json  load_test_baseline_20260403_101417.json  load_test_baseline_20260403_101700.json  load_test_baseline_20260403_102524.json  load_test_baseline_20260406_231128.json  load_test_baseline_20260416_093043.json  load_test_baseline_20260416_093608.json  load_test_baseline_20260416_100346.json  load_test_baseline_20260416_100529.json
pyserver/scripts/payloads/: small_names.json  tpch_large_duckdb.json
pyserver/tests/: __init__.py  conftest.py  test_app.py  test_extra_filter_partial_datasource_regression.py  test_filter_e2e.py  test_filter_security.py  test_hard_to_reproduce.py  test_known_files.py  test_parsing.py  test_partial_parse.py  test_process_pool.py  test_pytrilogy_extra_filter_partial_datasource.py  test_query_core.py  test_upstream_partial_datasource_repro.py
pyserver/tests_mcp/: test_mcp.py
(+592 files in other folders)
