[package]
name = "trilogy-explorer"
version = "0.0.0"
description = "Trilogy Explorer — AI-native data exploration"
authors = ["Trilogy"]
edition = "2021"

[lib]
name = "trilogy_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
query-bridge = { path = "crates/query-bridge" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
