[package]
name = "query-bridge"
version = "0.1.0"
edition = "2021"
description = "Driver-agnostic query session manager for the Trilogy Explorer Tauri shell"

[features]
# Default to bundling DuckDB so a fresh `cargo build` produces a working
# explorer binary out of the box. Add more drivers behind their own features
# (postgres, sqlite, …) without bloating builds that don't need them.
default = ["duckdb"]
duckdb = ["dep:duckdb", "dep:arrow-ipc", "dep:arrow-schema"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }

# duckdb 1.3.2 brings in arrow 55 but doesn't enable arrow's `ipc` feature,
# so we depend on arrow-ipc / arrow-schema directly at the same major
# version. They share the underlying Arc<Schema> and RecordBatch types
# with whatever duckdb re-exports, so passing them across the boundary
# Just Works.
arrow-ipc = { version = "55", optional = true }
arrow-schema = { version = "55", optional = true }
duckdb = { version = "=1.3.2", optional = true, features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
